--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,6 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
 /node_modules
 /.pnp
 .pnp.js
-.yarn/install-state.gz
 
 # testing
 /coverage
@@ -27,6 +23,23 @@ yarn-error.log*
 
 # local env files
 .env*.local
+.env
+/.env.local
+/.env.development.local
+/.env.test.local
+/.env.production.local
+/.env
+*.env
+
+/test
+/test/*
+/test/**/*
+/test/**/**/*
+/test/**/**/**/*
+/test/**/**/**/**/*
+/test/**/**/**/**/**/*
+/test/**/**/**/**/**/**/*
+/test/**/**/**/**/**/**/**/*
 
 # vercel
 .vercel
