--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next-cloudinary": "^6.5.0",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.75.0"
+    "sass": "^1.75.0",
+    "server-only": "^0.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
