--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.12.1",
+    "@vercel/analytics": "^1.3.1",
     "framer-motion": "^11.0.28",
     "next": "14.2.1",
     "react": "^18",
